# AIFood

./: README.md  user.sql
PlantsDiseaseDetection/: pyproject.toml  requirements.txt  server.py
PlantsDiseaseDetection/templates/: index.html
Tempflask/: ConfigChecker.py  ThirdPartyServerConfig.ini  ThirdPartyServerManager.py  main.py  test.py
foodadmin/: pom.xml
foodadmin/src/main/java/tz/gml/foodadmin/: FoodadminApplication.java
foodadmin/src/main/java/tz/gml/foodadmin/config/: CorsConfig.java
foodadmin/src/main/resources/: application.properties
foodadmin/src/test/java/tz/gml/foodadmin/: FoodadminApplicationTests.java  UserServiceTest.java
foodsafe/: components.d.ts  index.html  jsconfig.json  package-lock.json  package.json  typed-router.d.ts  vite.config.mjs
foodsafe/src/: App.vue  global.scss  main.js
foodsafe/src/components/: AppBar.vue
foodsafe/src/components/chat/: ChatHeader.vue  ChatInput.vue  MessageList.vue
foodsafe/src/components/history/: HistoryFilterSection.vue  HistoryHeader.vue  HistoryRecordListView.vue  HistoryReportDialog.vue
foodsafe/src/components/index/: FeaturesSection.vue  HeroSection.vue  HowItWorks.vue  StatsSection.vue
foodsafe/src/components/knowledge/: ArticleDialog.vue  ArticleList.vue  CategorySidebar.vue  MobileCategorySelector.vue
foodsafe/src/components/scan/: ResultsSection.vue  UploadSection.vue
foodsafe/src/pages/: chat.vue  history.vue  index.vue  knowledge.vue  login.vue  profile.vue  scan.vue
foodsafe/src/plugins/: axios.js  index.js  vuetify.js
(+12 files in other folders)
